Add K6 scripts and add 'heavy query' behavior